# Background-Subtraction-for-Moving-Camera

./: CMakeLists.txt  README.md
src/: dual_sgm.cpp  dual_sgm.h  main.cpp  param.h
src/dvo_integration/: CMakeLists.txt  dense_tracker_bgs.cpp  dvo_test.cpp
src/gmm/: BGModelMog.cpp  BGModelMog.h  CMakeLists.txt  bgfb_gaussmix2.cpp  bgfg_gaussmix2.h  gmm_bowden.cpp  gmm_bowden.h  gmm_with_depth.cpp  gmm_with_depth.h  gmm_zikovic.cpp  gmm_zikovic.h
src/motion_removal/: CMakeLists.txt  motion_removal.cpp  motion_removal.h  particle_filter.cpp  particle_filter.h
src/rgbd_motion_removal/: motion_removal.cpp  motion_removal.h  particle_filter.cpp  particle_filter.h  particlefilter.cpp  particlefilter.h
src/sgm/: dual_sgm.cpp  dual_sgm.h
src/util/: CMakeLists.txt  file_reader.h  image_transformer.cpp  image_transformer.h  read_lines.cpp  read_lines.h  surface_pyramid.cpp
src/util/include/bgs_util/: file_reader.h  image_transformer.h  surface_pyramid.h
src/util/src/: file_reader.cpp  image_transformer.cpp  surface_pyramid.cpp
